package com.example.practica.entity;

public enum Role {
    ADMIN, CLIENT
}
